# ArmyAntSim

./: CMakeLists.txt  README.md  run_simulator.sh
experiments/: README.md
launch_experiment/: redo_stragglers.py  simple.py  simple_r.py  sweep_conrol.py  sweep_flat_control.py  sweep_island_control.py  sweep_island_control_aamas.py  sweep_logistic.py  sweep_push_delay.py  sweep_sigma_iros.py
launch_experiment/batches_to_redo/: island_high_ks.yaml  island_low_ks.yaml
lib/: README.md
process_data/: generate_k_curve.py  process_control_sweep.py  process_control_sweeps.py  process_iros_sweep.py  process_s_curve.py  process_sigma_sweep.py  s.py  test_fail_read.py  utils.py
results/: _result.txt  bridge.txt
results/island_1.5/0/: _result.txt
results/island_1.5/1/: _result.txt
results/pit_1.5/0/: _result.txt
results/pit_1.5/1/: _result.txt
results/pit_2/0/: _result.txt
results/pit_2/1/: _result.txt
results/pit_3/0/: _bridge.txt
results/step_down_1.5/0/: _result.txt
results/step_down_1.5/1/: _result.txt
results/sweep_iros_terrains_sigma_0_to_10/pit_0/0/: bridge.txt
results/terrace_1.5/0/: _result.txt
results/terrace_1.5/1/: _result.txt
script/: get_length_matlab
simulation/binaries/: SimAnvill  SimFlatLand  SimSmallV
simulation/src/: BoxTerrain.cpp  BoxTerrain.h  CliffTerrain.cpp  CliffTerrain.h  Config.h  DefaultTerrain.cpp  DefaultTerrain.h  Demo.cpp  Demo.h  FlatTerrain.cpp  FlatTerrain.h  IslandTerrain.cpp  IslandTerrain.h  PitTerrain.cpp  PitTerrain.h  Ramp.cpp  Ramp.h  Robot.cpp  Robot.h  RobotController.cpp  RobotController.h  StepDownTerrain.cpp  StepDownTerrain.h  TerraceTerrain.cpp  TerraceTerrain.h  Terrain.cpp  Terrain.h  V2BLTerrain.cpp  V2BLTerrain.h  VStepper.cpp  VStepper.h  Vterrain.cpp  Vterrain.h  main.cpp  makefile
